added two papers that were recommended by the reviewers
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5259 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,12 +2,31 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-04-23 20:27:40 -0400 
+%% Created for Nils Peters at 2009-06-01 09:29:44 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{ReiterTANGA,
+	Address = {Ilmenau, Germany},
+	Author = {Ulrich Reiter},
+	Booktitle = {Proc. of the 2nd Audio Mostly conference },
+	Date-Added = {2009-06-01 09:22:57 -0400},
+	Date-Modified = {2009-06-01 09:26:07 -0400},
+	Title = {{TANGA} - an Interactive Object-Based Real Time Audio Engine},
+	Year = {2007}}
+
+@conference{FischerAES126,
+	Address = {Munich, Germany},
+	Author = {Jens-Oliver Fischer and Francis Gropengiesser and Sandra Brix},
+	Booktitle = {126th AES Convention, Preprint 7743},
+	Date-Added = {2009-06-01 09:19:15 -0400},
+	Date-Modified = {2009-06-01 09:22:38 -0400},
+	Journal = {126th AES Convention, },
+	Title = {Cooperative Spatial Audio Authoring: Systems Approach and Analysis of Use Cases},
+	Year = {2009}}
 
 @article{Puckette:2002_max_at_17,
 	Author = {Miller Puckette},
