adding another reference
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5263 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-06-01 09:29:44 -0400 
+%% Created for Nils Peters at 2009-06-01 16:12:36 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{MeltzerTMT08,
+	Address = {Leipzig, Germany},
+	Author = {Stefan Meltzer and Lutz Altmann and Andreas Gr{\"a}fe and Jens-Oliver Fischer},
+	Booktitle = {Proc. of the 25th Tonmeistertagung},
+	Date-Added = {2009-06-01 16:11:41 -0400},
+	Date-Modified = {2009-06-01 16:12:11 -0400},
+	Title = {An object oriented mixing approach for the design of spatial audio scenes},
+	Year = {2008}}
 
 @inproceedings{ReiterTANGA,
 	Address = {Ilmenau, Germany},
