--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-06-01 16:12:36 -0400 
+%% Created for Nils Peters at 2009-06-01 17:11:15 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -132,9 +132,9 @@
 @inproceedings{geier2008ssr,
 	Address = {Amsterdam, The Netherlands},
 	Author = {Matthias Geier and Jens Ahrens and Sascha Spors},
-	Booktitle = {124th AES Convention},
+	Booktitle = {124th AES Convention, Preprint 7330},
 	Date-Added = {2009-04-17 13:36:39 -0400},
-	Date-Modified = {2009-04-17 13:36:39 -0400},
+	Date-Modified = {2009-06-01 17:11:11 -0400},
 	Month = may,
 	Title = {{The SoundScape Renderer: A Unified Spatial Audio Reproduction Framework for Arbitrary Rendering Methods}},
 	Year = 2008}
